Fixed the whitespace issue! Now just add your own shapes!! :)

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,20 +29,27 @@ body {
 
 /* add background image here */
 .background {
-  position: relative !important;
+  /* position: relative !important;
   width: 100%;
-  height: 100%;
+  height: 100%; */
   background-color: #424242;
-  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+  /* clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%); */
+  clip-path: polygon(20% 0, 70% 0, 50% 100%, 0% 100%);
   /* transform: translate3d(-200px, 0px, 0px); */
 }
 
-/* .shape {
-  position: relative !important;
-  width: 100%;
+.shape {
+  clip-path: polygon(70% 0, 100% 0, 80% 100%, 50% 100%);
+  /* clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%); */
+}
+
+.background,
+.shape {
+  position: absolute;
+  width: 300%;
   height: 100%;
-  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-} */
+  cursor: pointer;
+}
 
 .text {
   display: flex;
@@ -56,28 +63,32 @@ body {
 }
 
 .red {
-  background: red;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-  /* transform: translate3d(200px, 0px, 0px); */
+  background: blanchedalmond;
 }
 
 .purple {
-  background: purple;
-  position: absolute;
+  background: bisque;
+  /* position: absolute;
   width: 100%;
   height: 100%;
-  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+  clip-path: polygon(70% 0, 100% 0, 80% 100%, 50% 100%); */
   /* transform: translate3d(200px, 0px, 0px); */
 }
 
 .pink {
-  background: pink;
-  position: absolute;
+  background: burlywood;
+  /* position: absolute;
   width: 100%;
   height: 100%;
-  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+  clip-path: polygon(70% 0, 100% 0, 80% 100%, 50% 100%); */
   /* transform: translate3d(200px, 0px, 0px); */
+}
+
+.navbar button {
+  border: none;
+  background: rgba(0, 0, 0, 0);
+}
+
+.navbar button:focus {
+  outline: 0;
 }
